alteração na estilizaçao

--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,9 @@ main{
     font-size: 20px;
     color: #fff9d5; 
 }
+#peso{
+    margin-left: 10px;
+}
 #container-info input{
     text-align: center;
     font-size: 15px;
